fixed shift bug with name on home page

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -55,6 +55,7 @@
 }
 
 .hello input {
+    width: 100%;
     font-size: xx-large;
     border: none;
     background: none;
